--- a/gb/24/11/19/n14374480.md
+++ b/gb/24/11/19/n14374480.md
@@ -2,11 +2,12 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【菁英论坛】大逃亡又来了 红二代也想跑</h2>
+///image2=
 <h6></h6>
 <hr>
 	<p>【大纪元2024年11月20日讯】最近几年，大量的中国大陆人移民海外，包括富豪、中产阶层和普通人。很多人认为，这实际上是一种软性的反抗。人民逃亡，在中国历史上，从来都是对统治者的一种否定。事实上，中共1949年篡政之后，出现了包括文革期间的好几波大逃亡潮。如今，经济急剧恶化，政治迫害更为残酷，大陆又掀起了新一轮逃亡美国的热潮。</p>
 <h2>香港曾经是大陆人最大避难地</h2>
-<p>资深媒体人郭君在新唐人《菁英论坛》节目中表示，香港人口现在是七百多万，大约有三分之二的人是从大陆逃出来的，或者是他们的后代。1945年，香港只有60万人，到了1949年就已经有180万，1950年是220万，大部分都是逃离共产党跑到香港去的。</p>
+<p>中文大纪元报纸主编郭君在新唐人《菁英论坛》节目中表示，香港人口现在是七百多万，大约有三分之二的人是从大陆逃出来的，或者是他们的后代。1945年，香港只有60万人，到了1949年就已经有180万，1950年是220万，大部分都是逃离共产党跑到香港去的。</p>
 <p>我们可以把逃亡分为广义逃亡和狭义逃亡。广义逃亡，就是持证件正常出境的人，狭义逃亡就是爬山越岭偷渡的人。广义逃亡其实从1949年就开始了，当时中共占据大陆之后，迫使大批上海资本家逃亡，按照现在的说法就是撤资移民。还有知识分子，其中包括很多名人，包括张爱玲、金庸、钱穆、李嘉诚，也有香港前特首董建华的父亲、香港前特首林郑月娥的父亲，还有周润发的父亲等等。</p>
 <p>狭义逃亡，是五十年代之后的事情。因为香港是中国大陆唯一的一个人口密集区，交通也相对方便，所以逃过来的人特别多。很有名的香港《苹果日报》的老板黎智英，就是六十年代偷渡出来的。由于逃港人数特别多，到五十年代，香港政府实行了抵垒政策以限制大陆人。即使这样，在后来的大饥荒、六四之后，每一次中共发动运动和镇压后就会出现一批逃亡潮。</p>
 <p>抵垒政策，简单说就是香港是由三个区域组成的，香港岛、九龙半岛和新界。当初英国和满清政府签约，港岛和九龙半岛都有一个条文，说港英政府不能够阻拦中国军人，或者是老百姓来往和定居，但是新界租约中就没有此条款。英国所有的治理都是高度依赖法律。所以，当太多中国人逃亡香港的时候，港英政府就要阻拦，但它只能在新界阻拦，只要你跑到港岛或者是九龙界线以内的地方，只要证明你是中国人或者是华人，香港政府就只能按照满清的法律给你身份证，就像打棒球一样，到了九龙或者港岛，就算是安全抵垒了。</p>
@@ -28,35 +29,47 @@
 <p>《菁英论坛》制作组</p>
 <p>责任编辑：李昊#</p>
 <p>转载和引用《菁英论坛》文章，请保持原文内容，并标明出处。</p>
-	
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272757.md#1" target="_blank" rel="noopener">中国富豪流失全球居首 大多移民哪四国</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307180.md#1" target="_blank" rel="noopener">大量富豪及中产阶级为何润出中国 专家解析</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/12/13/n14135792.md#1" target="_blank" rel="noopener">购置日本地产 大批中国富人资产“润”出</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/7/5/n14029086.md#1" target="_blank" rel="noopener">不只是富人 中国精英也用脚投票加速离境</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14242462.md#1" target="_blank" rel="noopener">11万中国人才输港 佐证中共“留港不留人”计划</a></span></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/13/n14370686.md#1">【菁英论坛】B-21威慑中共 瓦解反介入战略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371491.md#1">【菁英论坛】以色列会和台湾建交吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/16/n14372266.md#1">【菁英论坛】世界水循环报告 三峡大坝破坏水循环</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372622.md#1">【菁英论坛】蓝光危害超新冠 唯有自救</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/12/n11108254.md#1" target="_blank">裴毅然：击碎“中国梦”的五反血案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607383.md#1">【元曲大家】什么样的杂剧堪称“千古绝品”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14372260.md#1">【未解之谜】“Trump”的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363100.md#1">三国英雄─周瑜(1)：江东天子气 花落谁家？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/8/n10769198.md#1">不辱使命、慷慨赴死的靖康第一忠臣李若水</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365767.md#1">清朝知府借香火钱 神明催债为救灾</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/19/n14373837.md#1">【未解之谜】雷达扫描惊现巨型地下城市 吴哥窟身世之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/16/n13826775.md#1">【神韵早期节目】挡不住神的路（2010年制作）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361825.md#1">【环球直击】《九评》20年 中国人觉醒 全球抗共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372754.md#1">华侨控股5吨黄金蒸发 3名高管秘密潜逃海外</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/17/n14372651.md#1">家庭年收入需多少钱 才能在美国买得起房子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/15/n14371696.md#1">11月在Costco购买的七款最佳Kirkland商品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/16/n14372591.md#1">张艺谋呼吁观众进影院 大陆网友犀利回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373811.md#1">黄晓明新片票房惨淡 被指疑受网红女友牵连</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/16/n14372613.md#1">女星李庚希金鸡奖爆冷夺后 台下有人喊“黑幕”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373737.md#1">吁纠正百度百科个人信息 汤唯IG发文求助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/16/n14372598.md#1">胡静素颜示人 脸上抹猪油敷大蒜显超冻龄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369127.md#1">防骨质疏松要及时补钙  这些因素影响钙吸收</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/14/n14371299.md#1">越南最美度假岛屿 富国岛南岛的迷人之处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/18/n14373265.md#1">赶快瞧一瞧 旅游专家每次出行必带的物品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14366941.md#1">日本医学专家独创长寿养生法：一十百千万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367143.md#1">皮肤问题别轻忽 从日常生活入手</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/19/n14374480.htm">【菁英论坛】大逃亡又来了 红二代也想跑</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/19/n14374480.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
